# Unified-Communication-Framework-for-Industrial-Robots-Machines-and-IIoT-Systems

./: README.md  package.xml  requirements.txt  setup.cfg  setup.py
config/: bridge_config.yaml
launch/: robot_bridge.launch.py
robot_bridge/: __init__.py  bridge_manager.py  main.py
robot_bridge/adapters/: __init__.py  base_adapter.py  mqtt_adapter.py  rest_adapter.py  ros2_adapter.py
robot_bridge/models/: __init__.py  message.py
robot_bridge/utils/: __init__.py  serializer.py
tests/: test_bridge_manager.py
